# learning_rust

./: Cargo.toml
grammar/src/: collections.rs  main.rs  other.rs  owner.rs  pointer.rs
hello/src/: hello.rs  lib.rs
restaurant/src/: front_of_house.rs  lib.rs
rustdoc_test/: Cargo.toml
rustdoc_test/doc/: search-index.js  settings.html  source-files.js
rustdoc_test/doc/docs/: all.html  fn.annotation.html  index.html  sidebar-items.js
rustdoc_test/doc/src/docs/: main.rs.html
rustdoc_test/src/: main.rs
src/: config.rs  main.rs
src/data_type_test/: data_types.rs  mod.rs  structs.rs
src/json_test/: json_test.rs  mod.rs
src/modules/: mod.rs  subm.rs
use_test/: Cargo.toml
use_test/src/: lib.rs  pubtest.rs
