[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "0.1.80"
time = "0.1.44"
hello = { path = "hello" }
json = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"

#[workspace]
#resolver = "2"
#members = [
#    "hello",
# ]